inserted filtered fetch

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -68,6 +68,7 @@ form input[type=text] {
     padding: 5px;
     margin-bottom: 5px;
     background-color: #eee;
+    border-radius: 5px;
 }
 
 .chat .username {
@@ -95,4 +96,5 @@ form input[type=text] {
 
 .makeBold{
     font-weight: bold;
+    color: green;
 }
