--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     background: #eee;
     text-align: center;
     padding: 0 25px;
@@ -50,12 +50,13 @@ body {
     color: green;
     line-height: 13px;
 }
-
+*/
 form {
     padding: 20px;
     padding-left: 0;
     margin-bottom: 20px;
-}
+    display: inline-flex;
+}/*
 
 form input[type=text] {
     margin-right: 10px;
@@ -98,3 +99,8 @@ form input[type=text] {
     font-weight: bold;
     color: green;
 }
+
+.name, .message, .writtenRoomName {
+    max-width: 100px;
+}
+*/
